[gd_scene load_steps=8 format=3 uid="uid://cqehhjcpxys4i"]

[ext_resource type="Script" path="res://src/scene/BulletRocket.gd" id="1_573lg"]
[ext_resource type="Texture2D" uid="uid://b4xn13gstq3e4" path="res://resource/player/bullet.webp" id="2_8mndb"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7dteb"]
radius = 7.0
height = 42.0

[sub_resource type="Animation" id="Animation_imkdh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_4yef2"]
resource_name = "destroy"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_id6i8"]
_data = {
"RESET": SubResource("Animation_imkdh"),
"destroy": SubResource("Animation_4yef2")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_0kp88"]

[node name="rocket_bullet" type="Area2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_573lg")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-4.76837e-07, 0)
scale = Vector2(2.75, 1)
texture = ExtResource("2_8mndb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_7dteb")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_id6i8")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="damage_area" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="damage_collison" type="CollisionShape2D" parent="damage_area"]
shape = SubResource("CircleShape2D_0kp88")
disabled = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="destroy"]
[connection signal="body_entered" from="damage_area" to="." method="_on_damage_area_entered"]
